drawing function, reset function

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 #container {
     width: 960px;
+    height: 960px;
     display: flex;
     flex-wrap: wrap;
     
@@ -13,12 +14,17 @@
 }
 
 .box {
-    background-color: blue;
+    background-color: white;
     width: 10px;
     height: 10px;
 }
 
-button {
-    margin: 10px 0;
-    text-align: center;
+.box:hover {
+    background-color: black;
+}
+
+.top {
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
 }
